k8s/spring-dpl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-dpl
spec:
  selector:
    matchLabels:
      app: spring-app
  template:
    metadata:
      labels:
        app: spring-app
    spec:
      containers:
      - name: spring-cont
        image: megmind007/file-upload:v.1.1.1
        ports:
        - containerPort: 8080
