k8s/spring-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-service
spec:
  selector:
    app: spring-service
  ports:
  - port: 8080
    targetPort: 8080
