k8s/spring-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: springingress
  labels:
    app.kubernetes.io/name: myingress
spec:
  rules:
  - host: api.soytola.site
    http:
      paths:
      - pathType: Prefix
        path: /api
